fixed gallery spacing with lots of images

--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -6024,13 +6024,10 @@ footer {
   border-radius: 2px; }
 
 .gallery-images {
-  margin-top: 2rem;
   margin-bottom: 4em; }
   .gallery-images img {
-    width: 100%; }
-
-.gallery-thumbs {
-  margin-top: 30px; }
+    width: 100%;
+    margin-top: 30px; }
 
 .post p {
   letter-spacing: .5px;
