--- a/public/styles/site/_layout.scss
+++ b/public/styles/site/_layout.scss
@@ -265,16 +265,12 @@ footer {
 }
 
 .gallery-images {
-	margin-top: 2rem;
     margin-bottom: 4em;
 
     img {
         width: 100%;
+        margin-top: 30px;
     }
-}
-
-.gallery-thumbs {
-    margin-top: 30px;
 }
 
 .post {
